--- a/formcss.css
+++ b/formcss.css
@@ -11,7 +11,7 @@ form{
     margin-top: 50px;
     }
 body{
-    background:url('https://drive.google.com/folderview?id=1TecSfJB9GMCBFJ4zU8XoOuRYc1GAAyXr') no-repeat center center/cover;   
+    background:url('https://drive.google.com/file/d/1A6tIG3eIlEfeiFYsZvy0fqm1xQD086Vv/view?usp=sharing') no-repeat center center/cover;   
     }
 form h1{
     color: white;
